# steroids

./: .gdbinit  .gitignore  .travis.yml  COMPILING.rst  Makefile  README.md  README.rst  TODO.rst  defs.mk  haskroid.cabal
Haskroid/: DynArr.hsc  Hapiroid.hs  Haskroid.hsc  Main.hs
doc/: design.rst
doc/example/: Makefile  README.rst  example.cc  program.c
include/steroid/: steroid.h
include/stid/: action.hh  action_stream.hh  executor.hh  replay.hh  tlsemit.hh  varemit.hh  verbosity.h
rt/: aha.c  buddy.c  debug.h  events.c  libc.c  lsd.c  lsd.h  main.c  mm.c  pthread.c  pthread.h  rt.h  start.s  thread-sched.c  thread-sched.h  tls.c  tls.h  unistd.c  verifier.c  verifier.h
rt/libc/: extvars.c  fs.c  fs.h  misc.c  misc.h  mm.c  mm.h  proc.c  proc.h  stdio.c  stdio.h
rtv/: rt.c  rt.h  start.s
scripts/: driver.sh
src/: action.cc  action.hh  action_stream.cc  action_stream.hh  api.c  api.cc  checker.cc  checker.hh  evconf.cc  evconf.hh  executor.cc  executor.hh  hsapi.cc  instrumenter.cc  instrumenter.hh  main.c  misc.cc  misc.hh  test.c  test.cc  test.hh  varemit.cc  vclock.hh  verbosity.h
src/pta/: fixpoint.cc  fixpoint.hh  memory-graph.cc  memory-graph.hh  memory-node.cc  memory-node.hh  node-base.hh  notes.rst  pointer-valuation.cc  pointer-valuation.hh  pointer-value.cc  pointer-value.hh  state.cc  state.hh  worklist.hh
tests/: Makefile  hello.c  pthread-nojoin.c  pthread-recursive.c
tests/pta/: Makefile  alloca1.ll  alloca10.ll  alloca2.c  fixpoint1.c  fixpoint2.c  inval1.ll  null1.ll  phi1.ll  run.sh  (+1 more)
utils/: driver.sh  find-and-extract-bcs
(+36 files in other folders)
