name:          haskroid 
version:       1.0
synopsis:      Steroid bindings for Haskell. 
description:   Steroid bindings for Haskell. 
author:        Marcelo Sousa 
maintainer:    Marcelo Sousa 
stability:     experimental
cabal-version: >= 1.8
build-type:    Simple 

flag developer
  description: operate in developer mode
  default: False

library
  build-depends:
    base >= 3 && < 5

  ghc-options: -Wall

  if flag(developer)
    ghc-options: -Werror

  exposed-modules:
    Haskroid.Haskroid

  include-dirs: include

  C-sources:
    src/api.cc

-- executable haskroid
--   main-is: Main.hs
--   
--   build-depends:
--       base >= 3 && < 5
--     , haskroid
--   
--   hs-source-dirs: Haskroid/
-- 
--   include-dirs: include
-- 
--   C-sources:
--     src/api.cc
